--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
     <div class="col-sm-4">
       <div class="panel panel-danger">
         <div class="panel-heading">
-          <h3 class="panel-title">End of Day</h3>
+          <h3 class="panel-title" id="dayOrFlex">End of Day</h3>
         </div>
         <div class="panel-body">
-          <span id='dayTimer'>Calculating...</span>
+          <span id='dayTimerOrFlexBlock'>Calculating...</span>
         </div>
       </div>
     </div>
